plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.my'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    maven {
        url 'https://github.com/psiegman/mvn-repo/raw/master/releases'
    }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:1.0.0-M5"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // P6Spy 의존성 추가
    implementation 'p6spy:p6spy:3.9.1'
    implementation 'com.github.gavlyukovskiy:datasource-decorator-spring-boot-autoconfigure:1.9.0'

    // 시큐리티 추가
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // Oauth 유저 추가
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // 토스페이먼츠 연동을 위한 추가 의존성
    implementation 'com.fasterxml.jackson.core:jackson-databind' // JSON 처리 (이미 포함되어 있을 가능성 높음)

    // 선택 사항: WebClient를 사용하려는 경우
    // implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // 선택 사항: Apache HttpClient
    // implementation 'org.apache.httpcomponents:httpclient:4.5.14'

    // 선택 사항: Base64 인코딩
    // implementation 'commons-codec:commons-codec:1.17.1'

    // Ollama(Spring AI) 연동
    implementation 'org.springframework.ai:spring-ai-ollama-spring-boot-starter'

    // 멀티 쓰레드
    implementation 'org.springframework.boot:spring-boot-starter'

    // 필수: WebFlux (WebClient, Mono, Flux) 및 Web (Controller 등) 지원
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'nl.siegmann.epublib:epublib-core:3.1'
    //email 인증 관련
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
    implementation 'javax.mail:javax.mail-api:1.6.2'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    // 엑셀
    implementation 'org.apache.poi:poi:5.2.5' // 최신 버전 확인 후 사용
    implementation 'org.apache.poi:poi-ooxml:5.2.5' // 최신 버전 확인 후 사용


}

tasks.named('test') {
    useJUnitPlatform()
}

configurations {
    all {
        exclude group: "org.slf4j", module: "slf4j-simple"
    }
}